{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 128,
  "lineage": "7b41c358-8103-6990-357a-60bbdb1bb140",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "IP_elastica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dbadad4f8410a4a",
            "arn": "arn:aws:ec2:us-east-1:590183983730:elastic-ip/eipalloc-03dbadad4f8410a4a",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0836c177805b87601",
            "domain": "vpc",
            "id": "eipalloc-03dbadad4f8410a4a",
            "instance": "i-0bf7862ca524e0953",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f31736218b629f79",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-34-225-54-158.compute-1.amazonaws.com",
            "public_ip": "34.225.54.158",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.mi_clave",
            "aws_network_interface.Interface_de_red",
            "aws_security_group.permitir_trafico_web",
            "aws_subnet.subred_1",
            "aws_vpc.vpc_produccion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a9115d9e297c6103",
            "arn": "arn:aws:ec2:us-east-1:590183983730:instance/i-0bf7862ca524e0953",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf7862ca524e0953",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mi_clave_aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f31736218b629f79"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f31736218b629f79",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "34.225.54.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0614964c5bab3ab3b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d466ec4d1bf9f7d",
            "tags": {
              "Name": "Servidor_Web"
            },
            "tags_all": {
              "Name": "Servidor_Web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05eb0636334692bc5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.mi_clave",
            "aws_network_interface.Interface_de_red",
            "aws_security_group.permitir_trafico_web",
            "aws_subnet.subred_1",
            "aws_vpc.vpc_produccion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183983730:internet-gateway/igw-0133f23462be52aa7",
            "id": "igw-0133f23462be52aa7",
            "owner_id": "590183983730",
            "vpc_id": "vpc-0de9462788f91a1c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_produccion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "Interface_de_red",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183983730:network-interface/eni-0f31736218b629f79",
            "attachment": [
              {
                "attachment_id": "eni-attach-01e65e80b613f093d",
                "device_index": 0,
                "instance": "i-0bf7862ca524e0953"
              }
            ],
            "id": "eni-0f31736218b629f79",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:b2:d6:bf:f5:57",
            "owner_id": "590183983730",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05eb0636334692bc5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d466ec4d1bf9f7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.permitir_trafico_web",
            "aws_subnet.subred_1",
            "aws_vpc.vpc_produccion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tabla_de_ruta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183983730:route-table/rtb-05f7086c3d59e6cfc",
            "id": "rtb-05f7086c3d59e6cfc",
            "owner_id": "590183983730",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0133f23462be52aa7",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0133f23462be52aa7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla de Ruta"
            },
            "tags_all": {
              "Name": "Tabla de Ruta"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de9462788f91a1c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_produccion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f80eef41abdf9cd",
            "route_table_id": "rtb-05f7086c3d59e6cfc",
            "subnet_id": "subnet-04d466ec4d1bf9f7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.tabla_de_ruta",
            "aws_subnet.subred_1",
            "aws_vpc.vpc_produccion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "permitir_trafico_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183983730:security-group/sg-05eb0636334692bc5",
            "description": "Permitir trafico web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05eb0636334692bc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "permitir_trafico_web",
            "name_prefix": "",
            "owner_id": "590183983730",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "permitir_trafico_web"
            },
            "tags_all": {
              "Name": "permitir_trafico_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de9462788f91a1c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_produccion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183983730:subnet/subnet-04d466ec4d1bf9f7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d466ec4d1bf9f7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183983730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred_produccion"
            },
            "tags_all": {
              "Name": "subred_produccion"
            },
            "vpc_id": "vpc-0de9462788f91a1c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_produccion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183983730:subnet/subnet-0b7974a0e50c55651",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7974a0e50c55651",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183983730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred_desarrollo"
            },
            "tags_all": {
              "Name": "subred_desarrollo"
            },
            "vpc_id": "vpc-0de9462788f91a1c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_produccion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_produccion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183983730:vpc/vpc-0de9462788f91a1c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ae49642f95cf9ad",
            "default_route_table_id": "rtb-0c38e443ce683ad24",
            "default_security_group_id": "sg-03b30c65a69a25dc1",
            "dhcp_options_id": "dopt-0fde1a94a12d47d37",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de9462788f91a1c4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c38e443ce683ad24",
            "owner_id": "590183983730"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}